modification of some site info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -137,7 +137,7 @@
                     <div class="row">
       
                       <div class="col-md-6 clearfix bottommargin-sm">
-                        <a href="#" class="social-icon si-dark si-colored si-facebook nobottommargin" style="margin-right: 10px;">
+                        <a href="{{ site.facebook }}" class="social-icon si-dark si-colored si-facebook nobottommargin" style="margin-right: 10px;">
                           <i class="icon-facebook"></i>
                           <i class="icon-facebook"></i>
                         </a>
@@ -168,7 +168,7 @@
               <div class="container clearfix">
       
                 <div class="col_half">
-                  Copyrights &copy; 2014 All Rights Reserved by Metro Cebu North Force<br>
+                  Copyrights &copy; 2017 All Rights Reserved by Metro Cebu North Force<br>
                   <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
                 </div>
       
