added analytics with amp #10

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,7 @@
   <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
 
   <link rel="stylesheet" href="/css/responsive.css" type="text/css" />
+
+  <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+  <script custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js" async=""></script>
 </head>
