--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
                 <!-- Logo
                 ============================================= -->
                 <div id="logo">
-                  <a href="/" class="standard-logo" data-dark-logo="/images/logo-dark.png"><img src="/images/logo.png" alt="Canvas Logo"></a>
-                  <a href="/" class="retina-logo" data-dark-logo="/images/logo-dark@2x.png"><img src="/images/logo@2x.png" alt="Canvas Logo"></a>
+                  <a href="/" class="standard-logo" data-dark-logo="/images/logo-dark.png"><img src="/images/logo.png" alt="Metro Cebu North Force"></a>
+                  <a href="/" class="retina-logo" data-dark-logo="/images/logo-dark@2x.png"><img src="/images/logo@2x.png" alt="Metro Cebu North Force"></a>
                 </div><!-- #logo end -->
       
                 <!-- Primary Navigation
