#9 use Merriweather font

--- a/css/dark.css
+++ b/css/dark.css
@@ -55,13 +55,13 @@ body #side-panel.dark { background-color: #383838; }
 .dark .top-links li > a { color: #AAA; }
 
 .dark .top-links li:hover {
-	background-color: #333;
+	background-color: #126C3C;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 }
 
 .dark .top-links ul ul,
 .dark .top-links ul div.top-link-section {
-	background: #333;
+	background: #126C3C;
 	border-bottom: none;
 }
 
@@ -80,7 +80,7 @@ body #side-panel.dark { background-color: #383838; }
 
 .dark #header:not(.transparent-header),
 #header.dark:not(.transparent-header) {
-	background-color: #333;
+	background-color: #126C3C;
 	border-bottom: 1px solid rgba(255,255,255,0.05);
 }
 
@@ -93,7 +93,7 @@ body #side-panel.dark { background-color: #383838; }
 #header.dark.transparent-header.floating-header .container,
 #header.dark.transparent-header.floating-header.sticky-header .container,
 .dark .responsive-sticky-header #header-wrap,
-.responsive-sticky-header.dark #header-wrap { background-color: #333; }
+.responsive-sticky-header.dark #header-wrap { background-color: #126C3C; }
 
 .dark #header.full-header #header-wrap:not(.not-dark),
 #header.full-header.dark #header-wrap:not(.not-dark) { border-bottom-color: rgba(255,255,255,0.15); }
@@ -179,7 +179,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .dark #primary-menu:not(.not-dark) ul li .mega-menu-content,
 #primary-menu.dark ul ul,
 #primary-menu.dark ul li .mega-menu-content {
-	background-color: #333;
+	background-color: #126C3C;
 	border-color: #3F3F3F;
 	border-top-color: #1ABC9C;
 }
@@ -258,7 +258,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 
 
 .dark #top-cart .top-cart-content {
-	background-color: #333;
+	background-color: #126C3C;
 	border-color: #3F3F3F;
 	border-top-color: #1ABC9C;
 }
@@ -284,7 +284,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 
 
 .dark.side-header #header {
-	background-color: #333;
+	background-color: #126C3C;
 	border-right-color: #3F3F3F;
 }
 
@@ -307,7 +307,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .dark .swiper-pagination span { border-color: rgba(255,255,255,0.08); }
 
 .dark .swiper-pagination span:hover,
-.dark .swiper-pagination span.swiper-pagination-bullet-active { background-color: #333 !important; }
+.dark .swiper-pagination span.swiper-pagination-bullet-active { background-color: #126C3C !important; }
 
 
 .dark .slider-caption,
@@ -382,13 +382,13 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .dark .portfolio-desc span a:hover { color: #CCC; }
 
 .dark .portfolio-notitle .portfolio-desc {
-	background-color: #333;
+	background-color: #126C3C;
 	border-bottom: 1px solid rgba(255,255,255,0.08);
 }
 
 .dark .portfolio-1 .portfolio-item { border-bottom-color: rgba(255,255,255,0.08); }
 
-.dark .portfolio-1.portfolio-fullwidth .portfolio-desc { background-color: #333; }
+.dark .portfolio-1.portfolio-fullwidth .portfolio-desc { background-color: #126C3C; }
 
 .dark .portfolio-overlay a {
 	background-color: rgba(0,0,0,0.5);
@@ -398,7 +398,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .dark .portfolio-overlay a:hover { background-color: rgba(0,0,0,0.7); }
 
 .dark .ajax-modal-title {
-	background-color: #333;
+	background-color: #126C3C;
 	border-bottom-color: rgba(255,255,255,0.08);
 }
 
@@ -445,7 +445,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 
 .dark .post-timeline .entry.entry-date-section span {
 	border-color: rgba(255,255,255,0.1);
-	background-color: #333;
+	background-color: #126C3C;
 }
 
 .dark .post-timeline .entry-timeline div.timeline-divider { border-top-color: rgba(255,255,255,0.1); }
@@ -591,7 +591,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 
 .not-dark .button.button-border:not(.button-light) {
 	border-color: #444;
-	color: #333;
+	color: #126C3C;
 }
 
 .not-dark .button.button-border:not(.button-light):hover {
@@ -961,7 +961,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .dark .heading-block.not-dark h3,
 .dark .heading-block.not-dark h4,
 .dark .emphasis-title.not-dark h1,
-.dark .emphasis-title.not-dark h2 { color: #333; }
+.dark .emphasis-title.not-dark h2 { color: #126C3C; }
 
 .dark .heading-block:not(.not-dark) > span { color: #EEE; }
 
@@ -1022,7 +1022,7 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 
 #footer.dark,
 .dark #footer {
-	background-color: #333;
+	background-color: #126C3C;
 	color: #CCC;
 	border-top-color: rgba(0,0,0,0.2);
 }
@@ -1297,7 +1297,7 @@ body #side-panel.dark #side-panel-trigger-close a {
 .dark .btn-link:focus { color: #EEE; }
 
 .dark .dropdown-menu {
-	background-color: #333;
+	background-color: #126C3C;
 	border-color: #3F3F3F;
 }
 
@@ -1686,7 +1686,7 @@ body #side-panel.dark #side-panel-trigger-close a {
 	.dark #header.semi-transparent,
 	#header.dark.transparent-header,
 	#header.dark.semi-transparent {
-		background-color: #333;
+		background-color: #126C3C;
 		border-bottom-color: rgba(255,255,255,0.1);
 	}
 
@@ -1694,7 +1694,7 @@ body #side-panel.dark #side-panel-trigger-close a {
 	.dark #primary-menu.mobile-menu-off-canvas:not(.not-dark) > div > ul,
 	#primary-menu.mobile-menu-off-canvas.dark > ul,
 	#primary-menu.mobile-menu-off-canvas.dark > div > ul {
-		background-color: #333;
+		background-color: #126C3C;
 		border-right: 1px solid rgba(255,255,255,0.05) !important;
 	}
 
