--- a/css/fonts.css
+++ b/css/fonts.css
@@ -47,7 +47,7 @@ label,
 
 .font-body { font-family: 'Lato', sans-serif !important; }
 
-.font-primary { font-family: 'Raleway', sans-serif !important; }
+.font-primary { font-family: 'Merriweather', sans-serif !important; }
 
 .font-secondary { font-family: 'Crete Round', serif !important; }
 
