--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,17 +16,17 @@
       
                       <img src="/images/footer-widget-logo.png" alt="" class="footer-logo">
       
-                      <p>We believe in <strong>Simple</strong>, <strong>Creative</strong> &amp; <strong>Flexible</strong> Design Standards.</p>
+                      <p>Build a <strong>Career</strong> in Manulife. Be One with the Force. Join your <strong>Dynamic Team </strong>in Metro Cebu!</p>
       
                       <div style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
                         <address>
                           <strong>Headquarters:</strong><br>
-                          795 Folsom Ave, Suite 600<br>
-                          San Francisco, CA 94107<br>
+                          Keppel Tower, Cebu Business Park<br>
+                          Cebu City, PH 6000<br>
                         </address>
-                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
-                        <abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
-                        <abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (63) 32 1234567<br>
+                        <abbr title="Fax"><strong>Fax:</strong></abbr> (63) 32 123 4567<br>
+                        <abbr title="Email Address"><strong>Email:</strong></abbr> {{ site.email }}
                       </div>
       
                     </div>
@@ -105,12 +105,12 @@
                     <div class="row">
       
                       <div class="col-md-6 bottommargin-sm">
-                        <div class="counter counter-small"><span data-from="50" data-to="15065421" data-refresh-interval="80" data-speed="3000" data-comma="true"></span></div>
-                        <h5 class="nobottommargin">Total Downloads</h5>
+                        <div class="counter counter-small"><span data-from="10" data-to="1122" data-refresh-interval="3" data-speed="1500" data-comma="true"></span></div>
+                        <h5 class="nobottommargin">Total Members</h5>
                       </div>
       
                       <div class="col-md-6 bottommargin-sm">
-                        <div class="counter counter-small"><span data-from="100" data-to="18465" data-refresh-interval="50" data-speed="2000" data-comma="true"></span></div>
+                        <div class="counter counter-small"><span data-from="100" data-to="18465" data-refresh-interval="3" data-speed="2000" data-comma="true"></span></div>
                         <h5 class="nobottommargin">Clients</h5>
                       </div>
       
