--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,11 +21,13 @@
                       <div style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
                         <address>
                           <strong>Headquarters:</strong><br>
-                          Keppel Tower, Cebu Business Park<br>
+                          Unit 101, G/F Keppel Center,<br>
+                          Samar Loop cor Cardinal Rosales Avenue, <br>
+                          Cebu Business Park<br>
                           Cebu City, PH 6000<br>
                         </address>
-                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (63) 32 1234567<br>
-                        <abbr title="Fax"><strong>Fax:</strong></abbr> (63) 32 123 4567<br>
+                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (63) 32 2319177<br>
+                        <abbr title="Fax"><strong>Fax:</strong></abbr> (63) 32 231 9177<br>
                         <abbr title="Email Address"><strong>Email:</strong></abbr> {{ site.email }}
                       </div>
       
