--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -171,7 +171,7 @@
       
                 <div class="col_half">
                   Copyrights &copy; 2017 All Rights Reserved by Metro Cebu North Force<br>
-                  <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+                  <div class="copyright-links"><a href="/terms-of-use/">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
                 </div>
       
                 <div class="col_half col_last tright">
