--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,8 @@
                     <li><a href="/$/"><div>Home</div></a></li>
                     <li><a href="/$/about-us"><div>About Us</div></a></li>
                     <li><a href="/$/services"><div>Services</div></a></li>
+                    <li><a href="/$/newsroom"><div>Newsroom</div></a></li>
+                    <li><a href="/$/contact"><div>Contact Us</div></a></li>
                   </ul>
       
                 </nav><!-- #primary-menu end -->
