netlify scripts for identity

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,6 @@
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
   <script custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js" async=""></script>
+  
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
