--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -192,3 +192,14 @@
             </div><!-- #copyrights end -->
       
           </footer><!-- #footer end -->
+          <script>
+            if (window.netlifyIdentity) {
+              window.netlifyIdentity.on("init", user => {
+                if (!user) {
+                  window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
+                  });
+                }
+              });
+            }
+          </script>
