moved to netlify

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,11 +20,11 @@
                 <nav id="primary-menu">
       
                   <ul>
-                    <li><a href="/$/"><div>Home</div></a></li>
-                    <li><a href="/$/about-us"><div>About Us</div></a></li>
-                    <li><a href="/$/services"><div>Services</div></a></li>
-                    <li><a href="/$/newsroom"><div>Newsroom</div></a></li>
-                    <li><a href="/$/contact-us"><div>Contact Us</div></a></li>
+                    <li><a href="/"><div>Home</div></a></li>
+                    <li><a href="/about-us"><div>About Us</div></a></li>
+                    <li><a href="/services"><div>Services</div></a></li>
+                    <li><a href="/newsroom"><div>Newsroom</div></a></li>
+                    <li><a href="/contact-us"><div>Contact Us</div></a></li>
                   </ul>
       
                 </nav><!-- #primary-menu end -->
